src/gwt/src/org/rstudio/core/client/files/filedialog/FileDialogStyles.css
@external gwt-CheckBox-FilesSelectAll;
@external gwt-DialogBox;
@external gwt-MenuItem-selected;
@external breadcrumb, breadcrumb-filepane;
@external rstudio-themes-flat, rstudio-themes-dark;
@external rstudio-themes-default, rstudio-themes-dark-grey, rstudio-themes-alternate;
@external editor_dark;

@eval THEME_DEFAULT_BORDER org.rstudio.core.client.theme.ThemeColors.defaultBorder;
@eval THEME_DARKGREY_BORDER org.rstudio.core.client.theme.ThemeColors.darkGreyBorder;
@eval THEME_ALTERNATE_BORDER org.rstudio.core.client.theme.ThemeColors.alternateBorder;

@eval THEME_DEFAULT_BACKGROUND org.rstudio.core.client.theme.ThemeColors.defaultBackground;
@eval THEME_DARKGREY_BACKGROUND org.rstudio.core.client.theme.ThemeColors.darkGreyBackground;
@eval THEME_ALTERNATE_BACKGROUND org.rstudio.core.client.theme.ThemeColors.alternateBackground;

@eval THEME_DEFAULT_BACKGROUND_TRANSPARENT org.rstudio.core.client.theme.ThemeColors.defaultBackgroundTransparent;
@eval THEME_DARKGREY_BACKGROUND_TRANSPARENT org.rstudio.core.client.theme.ThemeColors.darkGreyBackgroundTransparent;
@eval THEME_ALTERNATE_BACKGROUND_TRANSPARENT org.rstudio.core.client.theme.ThemeColors.alternateBackgroundTransparent;

@url DIRSEPARATOR dirseparator2x;
@url HOME home2x;

.contents, .filename {
   background-color: white;
   border: #cfd2d4 solid 1px;
}

.filenamePanel {
   width: 498px;
}

.filenameLabel {
   margin-right: 3px;
}

.filename {
   background-color: white;
   width: 100%;
   outline: none;
   height: 22px;
   font-size: 12px;
}

.contents {
   font-size: 12px;
   width: 500px;
   height: 300px;
}

.contents table {
   outline: none;
}

.contents td {
   cursor: default;
   white-space: nowrap;
   overflow-x: hidden;
}

.columnIcon {
   width: 16px;
}

.columnName {
}

.columnSize {
   width: 80px;
   color: #606060;
   text-align: right;
   padding-right: 16px;
}

.columnDate {
   width: 160px;
   color: #606060;
}

.contents tr.gwt-MenuItem-selected .columnSize,
.contents tr.gwt-MenuItem-selected .columnDate {
   color: white;
}

.gwt-CheckBox-FilesSelectAll {
   margin-left: 2px;
}

.gwt-DialogBox .breadcrumbFrame {
   width: 500px;
   margin-top: 6px;
   border: #cfd2d4 solid 1px;
   border-bottom: none;
}

.breadcrumbFrame {
   height: 20px;
}

.breadcrumb {
   position: relative;
   white-space: nowrap;
   overflow: hidden;
   background-color: #eeeff1;
   font-size: 11px;
}
.rstudio-themes-flat .breadcrumb {
   background: none;
}
.breadcrumb, .breadcrumb table, .breadcrumb td {
   height: 20px;
}
.breadcrumb-filepane {
   background-color: transparent;
   border: none;
}
.breadcrumb-filepane, .breadcrumb-filepane table, .breadcrumb-filepane td {
   height: 20px;
}
.breadcrumb table.path a,
.breadcrumb table.path span
{
   float: left;
   text-decoration: none;
   margin: 0;
   padding: 3px 6px 0 11px;
   height: 18px;
   background: DIRSEPARATOR center left no-repeat;
   background-size: 6px 9px;
}

.breadcrumb table.path a
{
   color: #0945bf;
}

.rstudio-themes-flat .rstudio-themes-dark .breadcrumb table.path a
{
   color: rgb(191,211,232);
}

.breadcrumb table.path .home {
   padding-left: 28px;
   background: HOME 0 1px no-repeat;
   background-size: 24px 18px;
}

.project {
   margin-bottom: 2px;
   margin-right: 4px;
}

.breadcrumb table.path .last {
   padding-right: 8px;
}

.breadcrumb .fade {
   position: absolute;
   left: 0;
   top: 0;
   width: 25px;
   height: 24px;
}

.goUp {
   margin: 0 3px 0 12px;
}

.browse {
}

.browse {
   color: #000;
   float: right;
   padding-left: 5px;
   padding-right: 5px;
   border: none;
   border-left: solid 1px #c2c7cb;
   background: none;
   width: 20px;
   height: 20px;
   overflow: hidden;
   margin-top: 0px;
}

button.browse:focus {
   outline:0;
}

.rstudio-themes-flat .rstudio-themes-dark .browse {
   color: #FFF;
}

.rstudio-themes-flat .rstudio-themes-default .browse {
   border-color: THEME_DEFAULT_BORDER;
}

.rstudio-themes-flat .rstudio-themes-dark-grey .browse {
   border-color: THEME_DARKGREY_BORDER;
}

.rstudio-themes-flat .rstudio-themes-alternate .browse {
   border-color: THEME_ALTERNATE_BORDER;
}

.rstudio-themes-flat .rstudio-themes-default .breadcrumb .fadeWrapper {
   background: linear-gradient(to right, THEME_DEFAULT_BACKGROUND, THEME_DEFAULT_BACKGROUND_TRANSPARENT);
}

.rstudio-themes-flat .rstudio-themes-dark-grey .breadcrumb .fadeWrapper {
   background: linear-gradient(to right, THEME_DARKGREY_BACKGROUND, THEME_DARKGREY_BACKGROUND_TRANSPARENT);
}

.rstudio-themes-flat .rstudio-themes-alternate .breadcrumb .fadeWrapper {
   background: linear-gradient(to right, THEME_ALTERNATE_BACKGROUND, THEME_ALTERNATE_BACKGROUND_TRANSPARENT);
}

